--- a/03-Http-Servlet/.settings/org.eclipse.wst.common.component
+++ b/03-Http-Servlet/.settings/org.eclipse.wst.common.component
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="02-Servlet-Project">
+    <wb-module deploy-name="03-Http-Servlet">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                
-        <property name="context-root" value="02-Servlet-Project"/>
-                
-        <property name="java-output-path" value="/02-Servlet-Project/target/classes"/>
-            
+        <property name="context-root" value="03-Http-Servlet"/>
+        <property name="java-output-path" value="/03-Http-Servlet/target/classes"/>
     </wb-module>
-    
 </project-modules>
